[package]
name = "img_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustnao = "0.2.1"
serde = "1.0.*"
serde_json = "1.0.*"
env_logger = "0.10.*"
dotenvy = "0.15.*"
log = "0.4.*"
clap = { version = "4.1.*", features = ["derive"] }
confy = "0.5.*"
